--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,11 @@
 </head>
 <body>
     <header>
-        <div class="header-div"> <h1 class="title"> Multihead Turing Machine</h1></div>
+        <div class="header-div"> 
+            
+            <h1 class="title"> <img class ="glass" src="~/imgs/glass.png"/> Fake News Detector</h1>
+            <p> Powered by Multihead Turing Machine Analysis</p>
+        </div>
         
     </header>
     <div class="grid-container">
