added button, text box

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,7 +27,9 @@
     </p>
 
     <div class="text-box-container">
-        <p> tanigna mo pakita mo</p>
+        <label for="name" style="font-weight:bold"> Enter Facebook Post:</label>
+        <input type="text" id="name" name="name">
+        <button class="analyze"> Analyze Post</button>
     </div>
 
-</div>
+</div>  
